--- a/site/src/main/resources/application.properties
+++ b/site/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 jwt.secret=secret
 
 
-spring.datasource.driverClassName = com.mysql.jdbc.Driver
+spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/ecom2?autoreconnect=true
 spring.datasource.username = root
 spring.datasource.password = root
