--- a/ReactUi/my-app/package.json
+++ b/ReactUi/my-app/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.4.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
