--- a/site/src/main/resources/application.properties
+++ b/site/src/main/resources/application.properties
@@ -2,13 +2,13 @@ jwt.secret=secret
 
 
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/ecom2?autoreconnect=true
+spring.datasource.url = jdbc:mysql://localhost:3306/ecom_test?autoreconnect=true
 spring.datasource.username = root
 spring.datasource.password = root
 
 
 spring.flyway.url = jdbc:mysql://localhost:3306/mysql
-spring.flyway.schemas = ecom2
+spring.flyway.schemas = ecom_test
 spring.flyway.user = root
 spring.flyway.password = root
 #spring.flyway.baseline-on-migrate=true
